# feersum_nlu/api/image_classifiers_api.py
@@ -5,7 +5,7 @@
 
     This is the HTTP API for Feersum NLU. See https://github.com/praekelt/feersum-nlu-api-wrappers for examples of how to use the API.  # noqa: E501
 
-    OpenAPI spec version: 2.0.37
+    OpenAPI spec version: 2.0.37.post2
     Contact: nlu@feersum.io
     Generated by: https://github.com/swagger-api/swagger-codegen.git
 """
@@ -603,7 +603,7 @@ class ImageClassifiersApi(object):
 
         :param async_req bool
         :param str instance_name: The name of the model instance. (required)
-        :param list[LabelledImageSample] labelled_image_sample_list: List of labelled image samples. (required)
+        :param list[LabelledImageSample] labelled_image_sample_list: List of image samples to delete. A sample can be deleted using either its content & label or its uuid. (required)
         :param str x_caller:
         :param str origin:
         :return: list[LabelledImageSample]
@@ -628,7 +628,7 @@ class ImageClassifiersApi(object):
 
         :param async_req bool
         :param str instance_name: The name of the model instance. (required)
-        :param list[LabelledImageSample] labelled_image_sample_list: List of labelled image samples. (required)
+        :param list[LabelledImageSample] labelled_image_sample_list: List of image samples to delete. A sample can be deleted using either its content & label or its uuid. (required)
         :param str x_caller:
         :param str origin:
         :return: list[LabelledImageSample]
@@ -825,7 +825,7 @@ class ImageClassifiersApi(object):
 
         :param async_req bool
         :param str instance_name: The name of the model instance. (required)
-        :param list[LabelledImageSample] labelled_image_sample_list: List of labelled image samples. (required)
+        :param list[LabelledImageSample] labelled_image_sample_list: List of image samples to delete. A sample can be deleted using either its content & label or its uuid. (required)
         :param str x_caller:
         :param str origin:
         :return: list[LabelledImageSample]
@@ -850,7 +850,7 @@ class ImageClassifiersApi(object):
 
         :param async_req bool
         :param str instance_name: The name of the model instance. (required)
-        :param list[LabelledImageSample] labelled_image_sample_list: List of labelled image samples. (required)
+        :param list[LabelledImageSample] labelled_image_sample_list: List of image samples to delete. A sample can be deleted using either its content & label or its uuid. (required)
         :param str x_caller:
         :param str origin:
         :return: list[LabelledImageSample]
