# feersum_nlu/models/intent_classifier_instance_detail.py
@@ -5,7 +5,7 @@
 
     This is the HTTP API for Feersum NLU. See https://github.com/praekelt/feersum-nlu-api-wrappers for examples of how to use the API.  # noqa: E501
 
-    OpenAPI spec version: 2.0.37
+    OpenAPI spec version: 2.0.37.post2
     Contact: nlu@feersum.io
     Generated by: https://github.com/swagger-api/swagger-codegen.git
 """
@@ -16,7 +16,7 @@ import re  # noqa: F401
 
 import six
 
-from feersum_nlu.models.labeled_word_manifold import LabeledWordManifold  # noqa: F401,E501
+from feersum_nlu.models.labelled_word_manifold import LabelledWordManifold  # noqa: F401,E501
 
 
 class IntentClassifierInstanceDetail(object):
@@ -51,7 +51,7 @@ class IntentClassifierInstanceDetail(object):
         'training_stamp': 'str',
         'num_training_samples': 'int',
         'num_testing_samples': 'int',
-        'word_manifold_list': 'list[LabeledWordManifold]',
+        'word_manifold_list': 'list[LabelledWordManifold]',
         'threshold': 'float'
     }
 
@@ -567,7 +567,7 @@ class IntentClassifierInstanceDetail(object):
         The list of labelled word manifolds used for training.  # noqa: E501
 
         :return: The word_manifold_list of this IntentClassifierInstanceDetail.  # noqa: E501
-        :rtype: list[LabeledWordManifold]
+        :rtype: list[LabelledWordManifold]
         """
         return self._word_manifold_list
 
@@ -578,7 +578,7 @@ class IntentClassifierInstanceDetail(object):
         The list of labelled word manifolds used for training.  # noqa: E501
 
         :param word_manifold_list: The word_manifold_list of this IntentClassifierInstanceDetail.  # noqa: E501
-        :type: list[LabeledWordManifold]
+        :type: list[LabelledWordManifold]
         """
 
         self._word_manifold_list = word_manifold_list
