# feersum_nlu/models/labelled_image_sample.py
@@ -5,7 +5,7 @@
 
     This is the HTTP API for Feersum NLU. See https://github.com/praekelt/feersum-nlu-api-wrappers for examples of how to use the API.  # noqa: E501
 
-    OpenAPI spec version: 2.0.37
+    OpenAPI spec version: 2.0.37.post2
     Contact: nlu@feersum.io
     Generated by: https://github.com/swagger-api/swagger-codegen.git
 """
@@ -33,27 +33,34 @@ class LabelledImageSample(object):
     swagger_types = {
         'image': 'str',
         'label': 'str',
-        'comment': 'str'
+        'comment': 'str',
+        'uuid': 'str'
     }
 
     attribute_map = {
         'image': 'image',
         'label': 'label',
-        'comment': 'comment'
+        'comment': 'comment',
+        'uuid': 'uuid'
     }
 
-    def __init__(self, image=None, label=None, comment=None):  # noqa: E501
+    def __init__(self, image=None, label=None, comment=None, uuid=None):  # noqa: E501
         """LabelledImageSample - a model defined in Swagger"""  # noqa: E501
 
         self._image = None
         self._label = None
         self._comment = None
+        self._uuid = None
         self.discriminator = None
 
-        self.image = image
-        self.label = label
+        if image is not None:
+            self.image = image
+        if label is not None:
+            self.label = label
         if comment is not None:
             self.comment = comment
+        if uuid is not None:
+            self.uuid = uuid
 
     @property
     def image(self):
@@ -73,8 +80,6 @@ class LabelledImageSample(object):
         :param image: The image of this LabelledImageSample.  # noqa: E501
         :type: str
         """
-        if image is None:
-            raise ValueError("Invalid value for `image`, must not be `None`")  # noqa: E501
         if image is not None and not re.search(r'^(?:[A-Za-z0-9+\/]{4})*(?:[A-Za-z0-9+\/]{2}==|[A-Za-z0-9+\/]{3}=)?$', image):  # noqa: E501
             raise ValueError(r"Invalid value for `image`, must be a follow pattern or equal to `/^(?:[A-Za-z0-9+\/]{4})*(?:[A-Za-z0-9+\/]{2}==|[A-Za-z0-9+\/]{3}=)?$/`")  # noqa: E501
 
@@ -98,8 +103,6 @@ class LabelledImageSample(object):
         :param label: The label of this LabelledImageSample.  # noqa: E501
         :type: str
         """
-        if label is None:
-            raise ValueError("Invalid value for `label`, must not be `None`")  # noqa: E501
 
         self._label = label
 
@@ -125,6 +128,29 @@ class LabelledImageSample(object):
         """
 
         self._comment = comment
+
+    @property
+    def uuid(self):
+        """Gets the uuid of this LabelledImageSample.  # noqa: E501
+
+        The uuid of the sample.  # noqa: E501
+
+        :return: The uuid of this LabelledImageSample.  # noqa: E501
+        :rtype: str
+        """
+        return self._uuid
+
+    @uuid.setter
+    def uuid(self, uuid):
+        """Sets the uuid of this LabelledImageSample.
+
+        The uuid of the sample.  # noqa: E501
+
+        :param uuid: The uuid of this LabelledImageSample.  # noqa: E501
+        :type: str
+        """
+
+        self._uuid = uuid
 
     def to_dict(self):
         """Returns the model properties as a dict"""
