# feersum_nlu/models/labelled_text_sample.py
@@ -5,7 +5,7 @@
 
     This is the HTTP API for Feersum NLU. See https://github.com/praekelt/feersum-nlu-api-wrappers for examples of how to use the API.  # noqa: E501
 
-    OpenAPI spec version: 2.0.37
+    OpenAPI spec version: 2.0.37.post2
     Contact: nlu@feersum.io
     Generated by: https://github.com/swagger-api/swagger-codegen.git
 """
@@ -34,31 +34,38 @@ class LabelledTextSample(object):
         'text': 'str',
         'label': 'str',
         'lang_code': 'str',
-        'comment': 'str'
+        'comment': 'str',
+        'uuid': 'str'
     }
 
     attribute_map = {
         'text': 'text',
         'label': 'label',
         'lang_code': 'lang_code',
-        'comment': 'comment'
+        'comment': 'comment',
+        'uuid': 'uuid'
     }
 
-    def __init__(self, text=None, label=None, lang_code=None, comment=None):  # noqa: E501
+    def __init__(self, text=None, label=None, lang_code=None, comment=None, uuid=None):  # noqa: E501
         """LabelledTextSample - a model defined in Swagger"""  # noqa: E501
 
         self._text = None
         self._label = None
         self._lang_code = None
         self._comment = None
+        self._uuid = None
         self.discriminator = None
 
-        self.text = text
-        self.label = label
+        if text is not None:
+            self.text = text
+        if label is not None:
+            self.label = label
         if lang_code is not None:
             self.lang_code = lang_code
         if comment is not None:
             self.comment = comment
+        if uuid is not None:
+            self.uuid = uuid
 
     @property
     def text(self):
@@ -78,8 +85,6 @@ class LabelledTextSample(object):
         :param text: The text of this LabelledTextSample.  # noqa: E501
         :type: str
         """
-        if text is None:
-            raise ValueError("Invalid value for `text`, must not be `None`")  # noqa: E501
 
         self._text = text
 
@@ -101,8 +106,6 @@ class LabelledTextSample(object):
         :param label: The label of this LabelledTextSample.  # noqa: E501
         :type: str
         """
-        if label is None:
-            raise ValueError("Invalid value for `label`, must not be `None`")  # noqa: E501
 
         self._label = label
 
@@ -151,6 +154,29 @@ class LabelledTextSample(object):
         """
 
         self._comment = comment
+
+    @property
+    def uuid(self):
+        """Gets the uuid of this LabelledTextSample.  # noqa: E501
+
+        The uuid of the sample.  # noqa: E501
+
+        :return: The uuid of this LabelledTextSample.  # noqa: E501
+        :rtype: str
+        """
+        return self._uuid
+
+    @uuid.setter
+    def uuid(self, uuid):
+        """Sets the uuid of this LabelledTextSample.
+
+        The uuid of the sample.  # noqa: E501
+
+        :param uuid: The uuid of this LabelledTextSample.  # noqa: E501
+        :type: str
+        """
+
+        self._uuid = uuid
 
     def to_dict(self):
         """Returns the model properties as a dict"""
