# swagger/swagger.yaml
@@ -2,7 +2,7 @@ swagger: "2.0"
 
 info:
   description: This is the HTTP API for Feersum NLU. See https://github.com/praekelt/feersum-nlu-api-wrappers for examples of how to use the API.
-  version: 2.0.37
+  version: 2.0.38
   title: FeersumNLU API
   contact:
     name: Feersum Engine
@@ -81,6 +81,8 @@ tags:
   description: An enpoint to manage API keys.
 - name: image_classifiers
   description: The API to your image classifier instances. Create a model, add some training data, train it and start doing retrieve/inference calls.
+- name: image_readers
+  description: The API to your image reader instances.
 
 
 paths:
@@ -5124,7 +5126,7 @@ paths:
         type: string
       - in: body
         name: labelled_image_sample_list
-        description: List of labelled image samples.
+        description: List of image samples to delete. A sample can be deleted using either its content & label or its uuid.
         required: true
         schema:
           type: array
@@ -5247,7 +5249,7 @@ paths:
         type: string
       - in: body
         name: labelled_image_sample_list
-        description: List of labelled image samples.
+        description: List of image samples to delete. A sample can be deleted using either its content & label or its uuid.
         required: true
         schema:
           type: array
@@ -5802,14 +5804,14 @@ responses:
         $ref: "#/definitions/synonym_sample"
 
   labelled_image_sample_list:
-    description: The list of labeled image samples.
+    description: The list of labelled image samples.
     schema:
       type: array
       items:
         $ref: "#/definitions/labelled_image_sample"
 
   labelled_text_sample_list:
-    description: The list of labeled text samples.
+    description: The list of labelled text samples.
     schema:
       type: array
       items:
@@ -5960,8 +5962,6 @@ definitions:
   crf_sample:
     description: A crf entity extractor training/testing utterance with labelled entities.
     type: object
-    required:
-    - text
     properties:
       text:
         type: string
@@ -5972,6 +5972,10 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/crf_entity"
+      uuid:
+        type: string
+        example: 'e11c7557-98bb-4a19-a13a-e23f0bf51870'
+        description: The uuid of the sample.
 
   synonym_entity:
     description: A synonym entity.
@@ -6017,6 +6021,10 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/synonym_entity"
+      uuid:
+        type: string
+        example: 'e11c7557-98bb-4a19-a13a-e23f0bf51870'
+        description: The uuid of the sample.
 
   model_revision:
     description: Summary of a model revision stored in the history.
@@ -6345,7 +6353,7 @@ definitions:
         description: The list of labelled word manifolds used for training.
         type: array
         items:
-          $ref: "#/definitions/labeled_word_manifold"
+          $ref: "#/definitions/labelled_word_manifold"
       threshold:
         description: There is typically some model dependent threshold to be set upon training and which is possibly mutable post training. This is that threshold.
         type: number
@@ -6430,7 +6438,7 @@ definitions:
         description: The list of labelled word manifolds used for training.
         type: array
         items:
-          $ref: "#/definitions/labeled_word_manifold"
+          $ref: "#/definitions/labelled_word_manifold"
       threshold:
         description: There is typically some model dependent threshold to be set upon training and which is possibly mutable post training. This is that threshold.
         type: number
@@ -7174,9 +7182,6 @@ definitions:
   labelled_image_sample:
     description: Labelled image sample.
     type: object
-    required:
-      - image
-      - label
     properties:
       image:
         type: string
@@ -7188,13 +7193,14 @@ definitions:
         description: A string note about the sample.
         type: string
         example: "Second sighting of a unicorn, but still looks a lot like a horse with a horn glued on."
+      uuid:
+        type: string
+        example: 'e11c7557-98bb-4a19-a13a-e23f0bf51870'
+        description: The uuid of the sample.
 
   labelled_text_sample:
     description: Labelled text sample.
     type: object
-    required:
-      - text
-      - label
     properties:
       text:
         type: string
@@ -7210,6 +7216,10 @@ definitions:
         description: A string note such as the exact answer text from a helpdesk or any other important facts about the text.
         type: string
         example: "Greeting with speaker's name."
+      uuid:
+        type: string
+        example: 'e11c7557-98bb-4a19-a13a-e23f0bf51870'
+        description: The uuid of the sample.
 
   tsne_sample:
     description: A TSNE data sample.
@@ -7236,7 +7246,7 @@ definitions:
         type: number
         example: 1.5
 
-  labeled_word_manifold:
+  labelled_word_manifold:
     description: A labelled (e.g. lang_code labelled) word manifold instance.
     type: object
     required:
@@ -7291,7 +7301,7 @@ definitions:
         description: The list of labelled word manifolds to use for training.
         type: array
         items:
-          $ref: "#/definitions/labeled_word_manifold"
+          $ref: "#/definitions/labelled_word_manifold"
       clsfr_algorithm:
         description: The name of the algorithm that should be used for the classification.
         type: string
